# embedded-rust-pitch

./: LICENSE  README.md
embedded/: Cargo.toml  Embed.toml
embedded/.cargo/: config
embedded/examples/: bare_minimum.rs  blinky_pac.rs
embedded/src/: lib.rs
fizzbuzz/src/: main.rs
snippets/: Cargo.toml
snippets/examples/: abstraction0.rs  abstraction1.rs  convenience0.rs  convenience1.rs  enums.c  enums.rs  ownership0.rs  ownership1.rs  ownership2.rs  traits.rs
snippets/src/: lib.rs
